@@ -1,5 +1,9 @@
 2008-11-27  Sam Steingold  <sds@gnu.org>
 
+	* makemake.in (GLLIB): remove variable, use GLLIB_O instead
+
+2008-11-27  Sam Steingold  <sds@gnu.org>
+
 	* utils/varbrace.c: use {} for empty `for' body to avoid a g++ warning
 	(outbuffer_off_insert): make `insert' a `const' to avoid a g++ warning
 	* utils/comment5.c: use {} for empty `while' body to avoid a g++ warning
